--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,11 @@
 default:
   filenames:
+    bank_book: bank.xlsx
+    bank_extract: data.csv
     contracts: contracts.xlsx
-    convert_bank_extract_save: output.xlsx
-    convert_bank_extract_source: data.csv
     sales_and_vat: sales_and_vat.xlsx
   rel_paths:
+    archive: archive/
     bookkeeping: bookkeeping/
     dropbox:
       ians_macbook_pro_local: ../../../Dropbox/
