--- a/config.yml
+++ b/config.yml
@@ -10,6 +10,7 @@ default:
     bookkeeping: bookkeeping/
     dropbox:
       ians_macbook_pro_local: ../../../Dropbox/
+      johns_mac_mini_local: ../../Dropbox/
 prod:
   rel_paths:
     accounting_periods:
