--- a/config.yml
+++ b/config.yml
@@ -12,6 +12,8 @@ default:
     dropbox:
       ians_macbook_pro_local: ../../../Dropbox/
       johns_mac_mini_local: ../../Dropbox/
+  codes:
+    bank_prefix: 08046
 prod:
   rel_paths:
     accounting_periods:
