--- a/config.yml
+++ b/config.yml
@@ -9,6 +9,7 @@ default:
   rel_paths:
     bank_book_archive: archive/bank_book/
     bank_statements: records/bank_statements/
+    data_csv_archive: archive/data_csv/
     bookkeeping: bookkeeping/
     dropbox:
       ians_macbook_pro_local: ../../../Dropbox/
